--- a/adm/templates/adm/login.html
+++ b/adm/templates/adm/login.html
@@ -1,9 +1,8 @@
-{% extends 'templates/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<body>
 <div class="wrapper">
     <section>
         <div id="log">
@@ -53,5 +52,4 @@
         </div>
     </section>
 </div>
-</body>
 {% endblock %}
