--- a/templates/painel_denuncias.html
+++ b/templates/painel_denuncias.html
@@ -19,7 +19,27 @@
     </div>
     {% endif %}
 
-    <p class="subtitle">Acompanhe o status das denúncias cadastradas nas últimas 24h.</p>
+<!--    <div class="d-flex justify-content-between align-items-center">-->
+<!--      <p class="subtitle mb-0">Acompanhe o status das denúncias cadastradas nas últimas 24h.</p>-->
+<!--      <button type="button" class="btn btn-warning mb-4" >Gerenciador</button>-->
+<!--    </div>-->
+
+    <div class="d-flex justify-content-between align-items-center">
+      <p class="subtitle mb-0">Acompanhe o status das denúncias cadastradas nas últimas 24h.</p>
+
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle mb-3" type="button" id="dropdownMenuButton"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Gerenciador
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Usuários</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+    </div>
+
 
     <div class="status-cards">
         <a href="{% url 'painel_denuncias' %}?status=recebida">
@@ -104,7 +124,7 @@
                         <a href="{% url 'denuncia-detalhe' denuncia.pk %}" class="action-btn view-btn" title="Visualizar">
                             <i class="fas fa-eye"></i>
                         </a>
-                        
+
                         <div class="dropdown">
                             <button class="action-btn edit-btn" type="button" id="statusDropdown{{ denuncia.id }}" data-bs-toggle="dropdown" aria-expanded="true" title="Atualizar Status">
                                 <i class="fas fa-edit"></i>
@@ -125,7 +145,7 @@
                                 {% endfor %}
                             </ul>
                         </div>
-                        
+
                         <form method="post" style="display: inline;" onsubmit="return confirm('Tem certeza que deseja excluir esta denúncia?');">
                             {% csrf_token %}
                             <input type="hidden" name="action" value="delete">
