Remover arquivos do índice do Git

--- a/adm/templates/adm/painel_adm.html
+++ b/adm/templates/adm/painel_adm.html
@@ -2,8 +2,7 @@
 {% block title %}Painel Administrativo{% endblock %}
 {% block content %}
 <div class="container mt-5">
-    <h2>Painel Administrativo</h2>
-    <a href="{% url 'adm:logout' %}" class="btn btn-danger float-end">Logout</a>
+<!--    <h2>Painel Administrativo</h2>-->
     <a href="{% url 'adm:cadastrar_usuario' %}" class="btn btn-primary float-end me-2">Cadastrar Usuário</a>
     <table class="table table-striped mt-4">
         <thead>
