--- a/adm/templates/adm/login.html
+++ b/adm/templates/adm/login.html
@@ -3,6 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<body>
 <div class="wrapper">
     <section>
         <div id="log">
@@ -10,46 +11,41 @@
                 <div class="card rounded-3 shadow p-4">
                     <div class="card-body">
                         <h2 class="text-center mb-4">Entre com seus dados:</h2>
-                        <form method="post">
-                        {% csrf_token %}
-                        {{ form.non_field_errors }}
-
-                        <div class="mb-3">
-                            {{ form.username.label_tag }}
-                            {{ form.username }}
-                            {% for error in form.username.errors %}
-                                <div class="text-danger">{{ error }}</div>
-                            {% endfor %}
-                        </div>
-
-                        <div class="mb-3">
-                            {{ form.password.label_tag }}
-                            {{ form.password }}
-                            {% for error in form.password.errors %}
-                                <div class="text-danger">{{ error }}</div>
-                            {% endfor %}
-                        </div>
-
-                        <input type="hidden" name="next" value="{{ request.GET.next }}">
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success rounded-pill w-100 mt-3">Login</button>
-                        </div>
-
-                        {% if error_message %}
-                            <div class="alert alert-danger mt-3">{{ error_message }}</div>
-                        {% endif %}
-
-                        <div role="alert" class="mt-3 text-center">
-                            <a href="/esqueceusenha/" class="btn btn-link">Esqueceu a Senha?</a>
-                            <a href="/primeiroacesso/" class="btn btn-link">Primeiro Acesso?</a>
-                        </div>
-                    </form>
-
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            {% if form.non_field_errors %}
+                                <div class="alert alert-danger">{{ form.non_field_errors }}</div>
+                            {% endif %}
+                            <div class="mb-3">
+<!--                                <label for="cpf" class="form-label">CPF</label>-->
+<!--                                <input type="number" id="cpf" name="username" class="form-control" placeholder="Digite apenas números" value="{{ form.username.value|default:'' }}">-->
+<!--                                -->
+                                <label for="username" class="form-label">Usuário</label>
+                                <input type="text" id="username" name="username" class="form-control" placeholder="Digite seu nome de usuário" value="{{ form.username.value|default:'' }}">
+                                {% for error in form.username.errors %}
+                                    <div class="text-danger">{{ error }}</div>
+                                {% endfor %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Senha</label>
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Digite sua senha">
+                                {% for error in form.password.errors %}
+                                    <div class="text-danger">{{ error }}</div>
+                                {% endfor %}
+                            </div>
+                            <input type="hidden" name="next" value="{{ next }}">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success rounded-pill w-100 mt-3">Login</button>
+                            </div>
+                            {% if error_message %}
+                                <div class="alert alert-danger mt-3">{{ error_message }}</div>
+                            {% endif %}
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 </div>
+</body>
 {% endblock %}
