--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
@@ -24,29 +22,75 @@
 
 <body>
 
-    <!-- Bloco para o conteúdo específico da página -->
-    {% block content %}
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'painel_denuncias' %}?status=recebida">Painel</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    {% endblock %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <!--      <a class="nav-link" href="{% url 'painel_denuncias' %}?status=recebida">Home <span class="sr-only">(current)</span></a>-->
+                    <a class="nav-link" href="#>Home <span class=" sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
 
-    <!-- Rodapé -->
-    {% block footer %}
-    <footer class="bg-dark text-white py-3 mt-5">
-        <div class="container text-center">
-            <p>2025 - Todos os direitos reservados. Denunciar é proteger!</p>
-            <p class="reservado">Desenvolvedor: <a href="https://wa.me/+5518997317434" target="_blank" rel="noopener noreferrer">Manoel Donda</a></p>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButton" role="button"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Gerenciador
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="{% url 'adm:painel_adm' %}">Usuários</a>
+                        <a class="dropdown-item" href="{% url 'adm:cadastrar_usuario' %}">Cadastrar Usuário</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'adm:logout' %}">Sair</a>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <!--      <a class="nav-link disabled" href="#">Disabled</a>-->
+                </li>
+            </ul>
+
+            <form class="d-flex my-2 my-lg-0">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
-    </footer>
-    {% endblock %}
 
-    <!-- Bootstrap Bundle with Popper -->
-    <!-- Escolha apenas uma versão do Bootstrap JS, recomendo a mais recente -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </nav>
+</div>
 
-    <!-- Bloco de scripts personalizados -->
-    {% block scripts_personalizados %}{% endblock %}
+<!-- Bloco para o conteúdo específico da página -->
+{% block content %}
 
-    <script>
+{% endblock %}
+
+<!-- Rodapé -->
+{% block footer %}
+<footer class="bg-dark text-white py-3 mt-5">
+    <div class="container text-center">
+        <p>2025 - Todos os direitos reservados. Denunciar é proteger!</p>
+        <p class="reservado">Desenvolvedor: <a href="https://wa.me/+5518997317434" target="_blank"
+                                               rel="noopener noreferrer">Manoel Donda</a></p>
+    </div>
+</footer>
+{% endblock %}
+
+<!-- Bootstrap Bundle with Popper -->
+<!-- Escolha apenas uma versão do Bootstrap JS, recomendo a mais recente -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Bloco de scripts personalizados -->
+{% block scripts_personalizados %}{% endblock %}
+
+<script>
     document.addEventListener("DOMContentLoaded", function() {
         var botaoAnonimo = document.getElementById("toggle-anonimo");
         var infoDenunciante = document.getElementById("denunciante-info");
@@ -65,7 +109,7 @@
             });
         }
     });
-    </script>
+</script>
 
 </body>
 </html>
